--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  background-color: #3c3c3c;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -7,7 +8,59 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+.mr20 {
+  margin-right: 20px;
+}
+
+.home-center {
+  height: calc(100vh - 50px - 52px);
+  justify-content: center;
+  align-items: center;
+}
+
+.header-center {
+  height: calc(100vh - 50px);
+  justify-content: center;
+  align-items: center;
+}
+
+.abs-center {
+  position: absolute !important;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.fullHeight {
+  height: 100%;
+}
+
+.btn {
+  font-size: 0.5rem !important;
+}
+
+.sound-wave {
+  height: 34px;
+  border-radius: 4px;
+  flex: 1;
+  margin-left: 10px;
+}
+
+.MuiFormControl-marginDense:first-child {
+  margin-top: 0px !important;
+}
+
+.share-links {
+  display: flex;
+}
+
+.share-links, .share-links button {
+  padding: 4px;
+}
+
+@media screen and (max-width: 768px) {
+  .MuiSnackbar-root {
+    left: 30px !important;
+    right: 30px !important;
+  }
 }
